Ensure 'Frame 1' etc. is visible in dark mode

--- a/slides/styles/code.css
+++ b/slides/styles/code.css
@@ -15,3 +15,7 @@ div[layout="two-cols"] div.col-right {
   padding-left:10px;
    padding-top: 53px;
 }
+
+.bg-red-200, .bg-yellow-300 {
+    color: black;
+}
